--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "@mui/icons-material": "5.8.3",
     "@mui/material": "5.8.3",
+    "axios": "0.27.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
